Load menu icons from SVG files and colorize them dynamically
Tested on Windows with changed theme to high contrast.

Signed-off-by: Szczepan Zalega <szczepan@nitrokey.com>

--- a/src/ui/mainwindow.ui
+++ b/src/ui/mainwindow.ui
@@ -205,6 +205,10 @@
              <property name="text">
               <string>Quit</string>
              </property>
+             <property name="icon">
+              <iconset resource="../../resources.qrc">
+               <normaloff>:/images/new/icon_quit.svg</normaloff>:/images/new/icon_quit.svg</iconset>
+             </property>
             </widget>
            </item>
           </layout>
