--- a/src/ui/mainwindow.ui
+++ b/src/ui/mainwindow.ui
@@ -1642,22 +1642,22 @@
      <x>0</x>
      <y>0</y>
      <width>932</width>
-     <height>27</height>
+     <height>29</height>
     </rect>
    </property>
   </widget>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <tabstops>
-  <tabstop>btn_dial_PWS</tabstop>
-  <tabstop>btn_dial_EV</tabstop>
-  <tabstop>btn_dial_HV</tabstop>
-  <tabstop>btn_dial_lock</tabstop>
-  <tabstop>btn_dial_help</tabstop>
-  <tabstop>btn_dial_quit</tabstop>
-  <tabstop>totpRadioButton</tabstop>
-  <tabstop>hotpRadioButton</tabstop>
-  <tabstop>slotComboBox</tabstop>
+  <tabstop>cb_first_run_message</tabstop>
+  <tabstop>cb_show_window_on_start</tabstop>
+  <tabstop>cb_hide_main_window_on_close</tabstop>
+  <tabstop>cb_hide_main_window_on_connection</tabstop>
+  <tabstop>trayIconColorEdit</tabstop>
+  <tabstop>cb_show_main_window_on_connection</tabstop>
+  <tabstop>cb_check_symlink</tabstop>
+  <tabstop>cb_device_connection_message</tabstop>
+  <tabstop>combo_languages</tabstop>
   <tabstop>nameEdit</tabstop>
   <tabstop>eraseButton</tabstop>
   <tabstop>base32RadioButton</tabstop>
@@ -1686,14 +1686,13 @@
   <tabstop>PWS_Lock</tabstop>
   <tabstop>PWS_ButtonClose</tabstop>
   <tabstop>PWS_ButtonSaveSlot</tabstop>
-  <tabstop>cb_first_run_message</tabstop>
-  <tabstop>cb_show_window_on_start</tabstop>
-  <tabstop>cb_check_symlink</tabstop>
-  <tabstop>cb_device_connection_message</tabstop>
-  <tabstop>cb_show_main_window_on_connection</tabstop>
-  <tabstop>cb_hide_main_window_on_connection</tabstop>
-  <tabstop>cb_hide_main_window_on_close</tabstop>
-  <tabstop>combo_languages</tabstop>
+  <tabstop>btn_dial_PWS</tabstop>
+  <tabstop>btn_dial_EV</tabstop>
+  <tabstop>totpRadioButton</tabstop>
+  <tabstop>hotpRadioButton</tabstop>
+  <tabstop>btn_dial_lock</tabstop>
+  <tabstop>btn_dial_HV</tabstop>
+  <tabstop>slotComboBox</tabstop>
   <tabstop>cb_debug_enabled</tabstop>
   <tabstop>edit_debug_file_path</tabstop>
   <tabstop>btn_select_debug_console</tabstop>
@@ -1709,6 +1708,8 @@
   <tabstop>secret_key_generated_len</tabstop>
   <tabstop>randomSecretButton</tabstop>
   <tabstop>btn_copyToClipboard</tabstop>
+  <tabstop>btn_dial_quit</tabstop>
+  <tabstop>btn_dial_help</tabstop>
  </tabstops>
  <resources>
   <include location="../../resources.qrc"/>
